@@ -1,5 +1,6 @@
 # Building and Deploying a JavaFX Application on macOS with Maven (Java 25)
 
+https://github.com/mbachmann/HelloJavaFXWorld
 
 This guide explains how to build, sign, notarize, and distribute a JavaFX application for macOS using **Maven**, `jlink`, `jpackage`, `codesign`, and `notarytool`. 
 The goal is to create a downloadable `.dmg` disk image that runs without Gatekeeper warnings.
@@ -57,7 +58,9 @@ If the Developer ID Application is **not** available, then follow the instructio
 
 ---
 
-## Create a Developer ID Application Certificate
+<br/>
+
+## ✅ Create a Developer ID Application Certificate
 
 ### Create a CSR File
 
@@ -104,7 +107,7 @@ https://developer.apple.com/account/resources/certificates/list
 
 ----
 
-## Notarise app password
+### Notarise app password
 The last step in getting all of the components together is to get a notarised app password for this specific app that you will be building.
 
 go to https://developer.apple.com/account/resources/identifiers/bundleId/add/bundle to add a new bundle for this application
@@ -121,7 +124,7 @@ Click on the Continue button and then Register.
 
 ----
 
-## App Specific Password
+### App Specific Password
 
 Now sign into https://appleid.apple.com/
 
@@ -148,7 +151,7 @@ Save this password — you will never see this password again — if you lose it
 
 ----
 
-## Summary about Developer ID Application certificate
+### Summary about Developer ID Application certificate
 
 1. Create a **Developer ID Application certificate** in your Apple Developer account.
 2. Download and install the certificate into your macOS Keychain.
@@ -169,23 +172,248 @@ export APPLE_HELLO_JAVA_FX_WORLD_APP_PASSWORD="your-app-specific-password"
 ```
 
 ---
+<br/>
 
-## ✅ Project Setup (Maven)
+## ✅ Project Setup (Maven) and modify the App
 
 Create a Maven JavaFX project with your prefered IDE (example: `HelloJavaFXWorld`).
 
 Here, for example, with IntelliJ:
 
-
+![create-fx-intellij.png](readme/create-fx-intellij.png)
 
 Ensure:
-- JDK 21+ with JavaFX modules.
+- JDK 25 with JavaFX modules.
 - Remove `-SNAPSHOT` from version in `pom.xml`:
   ```xml
   <version>1.0.0</version>
   ```
 
+Adapt the pom.xml file:
+
+```xml
+
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+
+    <groupId>unitedportal.javafx</groupId>
+    <artifactId>hellojavafxworld</artifactId>
+    <version>1.0.0</version>
+    <packaging>jar</packaging>
+
+    <properties>
+        <maven.compiler.release>25</maven.compiler.release>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <javafx.version>25</javafx.version>
+        <javafx-maven-plugin.version>0.0.8</javafx-maven-plugin.version>
+        <jpackage.plugin.version>1.7.1</jpackage.plugin.version>
+        <junit.version>5.12.1</junit.version>
+    </properties>
+
+    <dependencies>
+        <!-- JavaFX -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>${javafx.version}</version>
+        </dependency>
+
+        <!-- Tests -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <!-- Compiler -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.14.1</version>
+                <configuration>
+                    <release>${maven.compiler.release}</release>
+                </configuration>
+            </plugin>
+
+            <!-- Jar Manifest mit Main-Class -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.5.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>unitedportal.javafx.hellojavafxworld.HelloApplication</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+
+            <!-- Tests: JUnit 5 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.5.4</version>
+                <configuration>
+                    <useModulePath>false</useModulePath>
+                </configuration>
+            </plugin>
+
+            <!-- JavaFX: run + jlink -->
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>${javafx-maven-plugin.version}</version>
+                <configuration>
+                    <mainClass>unitedportal.javafx.hellojavafxworld/unitedportal.javafx.hellojavafxworld.HelloApplication</mainClass>
+
+                    <options>
+                        <option>--enable-native-access=javafx.graphics</option>
+                    </options>
+
+                </configuration>
+            <executions>
+                    <execution>
+                        <id>default-cli</id>
+                        <goals>
+                            <goal>jlink</goal>
+                        </goals>
+                        <configuration>
+                            <launcher>app</launcher>
+                            <mainClass>unitedportal.javafx.hellojavafxworld/unitedportal.javafx.hellojavafxworld.HelloApplication</mainClass>
+                            <jlinkImageName>image</jlinkImageName>
+                            <jlinkZipName>image</jlinkZipName>
+                            <noManPages>true</noManPages>
+                            <stripDebug>true</stripDebug>
+                            <noHeaderFiles>true</noHeaderFiles>
+                            <compress>2</compress>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.panteleyev</groupId>
+                <artifactId>jpackage-maven-plugin</artifactId>
+                <version>${jpackage.plugin.version}</version>
+                <configuration>
+                    <!-- Verwende das vom javafx-maven-plugin erzeugte Runtime-Image -->
+                    <runtimeImage>${project.build.directory}/app</runtimeImage>
+                    <mainJar>${project.build.finalName}.jar</mainJar>
+                    <name>HelloJavaFXWorld</name>
+                    <mainClass>unitedportal.javafx.hellojavafxworld/unitedportal.javafx.hellojavafxworld.HelloApplication</mainClass>
+                    <appVersion>${project.version}</appVersion>
+                    <!-- Für reine App-Images: -->
+                    <type>app-image</type>
+                    <javaOptions>
+                        <javaOption>--enable-native-access=javafx.graphics</javaOption>
+                        <javaOption>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</javaOption>
+                    </javaOptions>
+
+                    <!-- Optional: Installer statt App-Image
+                    <type>exe</type>        - Windows
+                    <type>msi</type>        - Windows
+                    <type>pkg</type>        - macOS
+                    <type>dmg</type>        - macOS
+                    <type>deb</type>        - Linux
+                    <type>rpm</type>        - Linux
+                    -->
+
+                    <!-- Optional: Icons etc.
+                    <icon>src/main/resources/icon.ico</icon>
+                    <vendor>Dein Name/Org</vendor>
+                    <copyright>© 2025</copyright>
+                    -->
+                    <destination>target/jpackage</destination>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+</project>
+
+```
+
+<br/>
+
+And the `HelloApplication.java` file to support a slash screen:
+
+```java
+package unitedportal.javafx.hellojavafxworld;
+
+import javafx.application.Application;
+import javafx.application.Platform;
+import javafx.fxml.FXMLLoader;
+import javafx.scene.Scene;
+import javafx.scene.input.KeyCode;
+import javafx.stage.Stage;
+
+import java.awt.*;
+import java.io.IOException;
+
+public class HelloApplication extends Application {
+	@Override
+	public void start(Stage stage) throws IOException {
+
+		stage.setOnCloseRequest(evt -> {
+			Platform.exit();
+			new Thread(() -> {
+				try { Thread.sleep(100); } catch (InterruptedException ignored) {}
+				System.exit(0);
+			}, "hard-exit").start();
+		});
+
+		var url = HelloApplication.class.getResource("hello-view.fxml");
+		System.out.println("FXML URL = " + url);
+
+
+		FXMLLoader fxmlLoader = new FXMLLoader(HelloApplication.class.getResource("hello-view.fxml"));
+		Scene scene = new Scene(fxmlLoader.load(), 320, 240);
+
+		scene.setOnKeyReleased(event -> {
+			if (event.getCode() == KeyCode.Q && event.isMetaDown()) {
+				System.out.println("exiting...");
+				Platform.exit();
+			}
+		});
+
+		stage.setTitle("Hello!");
+		stage.setScene(scene);
+		stage.show();
+
+		SplashScreen splash = SplashScreen.getSplashScreen();
+		if (splash != null) {
+			splash.close();
+		}
+	}
+
+	public static void main(String[] args) {
+		launch();
+	}
+}
+
+```
+
+Run the App. The result should be:
+
+![hello-fx-app.png](readme/hello-fx-app.png)
+
+The spash screen is not yet displayed. The splash screen file will be copied later into the `HelloJavaFXWorld.app/Contents/app` folder.
+
 ---
+
+<br/>
 
 ## ✅ Create Entitlements File
 
@@ -206,18 +434,23 @@ Ensure:
 </dict>
 </plist>
 ```
+---
 
-## Put the Icons and the Splash Screen to src/packaging
+<br/>
+
+## ✅ Put the Icons and the Splash Screen to src/packaging
 
 ![packaging-folder.png](readme/packaging-folder.png)
 
 ---
 
-## Scripts for jlink, jpackage, xcrun, codesign
+<br/>
+
+## ✅ Scripts for jlink, jpackage, xcrun, codesign
 
 The scripts can be found in `dist-mac.sh`. 
 
-### ✅ Verify the environment variable
+### Verify the environment variable
 
 ```bash
 echo $MAC_SIGNING_KEY_NAME
@@ -226,13 +459,13 @@ echo $APPLE_TEAM_ID
 echo $APPLE_HELLO_JAVA_FX_WORLD_APP_PASSWORD
 ```
 
-### ✅ Run the application
+### Run the application
 
 ```bash
 mvn clean javafx:run
 ```
 
-### ✅ Build Runtime Image with jlink
+### Build Runtime Image with jlink
 
 Use Maven plugin or command:
 
@@ -240,7 +473,7 @@ Use Maven plugin or command:
 mvn clean javafx:jlink
 ```
 
-### ✅ Verify Runtime Image with jlink
+### Verify Runtime Image with jlink
 
 ```bash
 target/image/bin/app
@@ -250,7 +483,7 @@ We are ready to jpackage
 
 ---
 
-### ✅ Package App with jpackage
+### Package App with jpackage
 
 #### Create `.app` bundle:
 
@@ -278,7 +511,7 @@ Copy splash image into `.app`:
 cp src/packaging/splash.png target/jpackage/HelloJavaFXWorld.app/Contents/app
 ```
 
-#### ✅ Re-Sign DMG
+#### Re-Sign DMG
 
 ```bash
 codesign \
@@ -319,7 +552,7 @@ jpackage \
 ---
 
 
-### ✅ Notarize and Staple
+### Notarize and Staple
 
 ```bash
 xcrun \
@@ -339,13 +572,17 @@ xcrun \
 
 ---
 
-### ✅ Validate
+### Validate
 
 ```bash
 spctl --assess --type open --verbose target/jpackage/HelloJavaFXWorld-1.0.0.dmg
 ```
 
 Expected: `accepted`.
+
+---
+
+<br/>
 
 
 ## ✅ Summary
